apply plugin: 'java'
apply plugin: 'application'

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    compileOnly "org.jetbrains:annotations:24.+"
    implementation "io.github.jwharm.javagi:glib:2.76-0.6-SNAPSHOT"
    implementation "io.github.jwharm.javagi:gtk:4.10-0.6-SNAPSHOT"
    implementation "io.github.jwharm.javagi:adwaita:1.3-0.6-SNAPSHOT"
}

task compileResources {
    doLast {
        exec {
            workingDir 'src/main/resources'
            commandLine 'glib-compile-resources', 'helloworld.gresource.xml'
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

tasks.withType(JavaCompile) {
    dependsOn compileResources
    options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

jar {
    archiveBaseName = "hellotemplate"
    archiveVersion = "0.1.0"
}

mainClassName = "io.github.jwharm.javagi.examples.hellotemplate.Main"
